照相完后  自动加载刚刚拍的相片显示